--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,10 @@
 </head>
 <body>
     <h1>Minhas tarefas</h1>
-    <ul></ul>
+    
+    <div id="app">
+        <ul></ul>
+    </div>
 
     <input type="text" name="" placeholder="Digite uma nova tarefa...">
     <button>Adicionar tarefa</button>
